translated remaining strings, will fix typos later
i am not sure with line 326, if i should use "upomínka" or "připomínka" for reminder, perhaps line 335 could say "upraven" instead of "aktualizován", and with lines that use {{target.tag}}'s because idk how do i add the 's, and i also have to test the bot for some things you can't possibly know just from language json - tl;dr i will continue tommorow (i hope so at least)

--- a/src/languages/cs-CZ.json
+++ b/src/languages/cs-CZ.json
@@ -270,75 +270,75 @@
   
     "invite_desc": "**Přidej bota na svůj server: **\n{{bot_invite}}\n\n**Přidej se na náš server**\n{{support_guild}}",
   
-    "remind_list_none": "{{emote_warn}} You have not set any reminders",
-    "remind_placeholder": "No Reminders Selected",
-    "remind_prompt": "{{emote_remind}} **{{user.tag}}'s** `({{user.id}})` active reminders",
-    "remind_remove_unable_to_find": "{{emote_fail}} Unable to find a reminder with the ID of `{{reminderId}}`",
-    "remind_remove_removed": "{{emote_success}} Successfully removed the reminder with the ID of `{{reminderId}}`",
-    "remind_set_how_to_get_reminded": "How would you like to get reminded?",
-    "remind_set_dm": "Send reminder in DM",
-    "remind_set_channel": "Send reminder in channel",
-    "remind_set_select_dm": "Will notify you in your dms **<t:{{duration}}:R>**",
-    "remind_set_select_channel": "Will notify you in this channel **<t:{{duration}}:R>**",
-    "remind_no_permissions": "{{emote_lock}} You cannot view another users reminders!",
-    "remind_not_found": "{{emote_warn}} Unable to find that reminder",
+    "remind_list_none": "{{emote_warn}} Nemáš nastaveny žádné upomínky",
+    "remind_placeholder": "Žádné upomínky vybrány",
+    "remind_prompt": "{{emote_remind}} **{{user.tag}}** `({{user.id}})` aktivní upomínky",
+    "remind_remove_unable_to_find": "{{emote_fail}} Nemohu najít připomínku s ID `{{reminderId}}`",
+    "remind_remove_removed": "{{emote_success}} Upomínka s ID `{{reminderId}}` byla úspěšně odebrána",
+    "remind_set_how_to_get_reminded": "Jak by jsi chtěl být upomenut?",
+    "remind_set_dm": "Poslat upomínku do DM",
+    "remind_set_channel": "Poslat upomínku do kanálu",
+    "remind_set_select_dm": "Připomenu ve tvých DMs **<t:{{duration}}:R>**",
+    "remind_set_select_channel": "Připomenu v tomto kanále **<t:{{duration}}:R>**",
+    "remind_no_permissions": "{{emote_lock}} Nemůžeš nahlížet do cizích upomínek!",
+    "remind_not_found": "{{emote_warn}} Nemohu najít tuto upomínku",
   
-    "remind_desc_header": "Reminder #{{reminder.id}}",
-    "remind_desc_reason": "**Reminder:** {{reminder.reason}}\n",
-    "remind_desc_expire": "**Expires:** <t:{{reminder.expireTime}}:R>\n",
-    "remind_desc_created": "**Created:** <t:{{createdAt}}> [`Link`]({{message}})",
+    "remind_desc_header": "Upomínka #{{reminder.id}}",
+    "remind_desc_reason": "**Upomínka:** {{reminder.reason}}\n",
+    "remind_desc_expire": "**Vyprší:** <t:{{reminder.expireTime}}:R>\n",
+    "remind_desc_created": "**Vytvořena:** <t:{{createdAt}}> [`Link`]({{message}})",
   
-    "inviteinfo_error": "{{emote_warn}} Unable to find a server with that invite",
-    "inviteinfo_verification_level": "Verification Level: `{{guild.verificationLevel}}`\n",
-    "inviteinfo_large": "Large: `{{guild.large}}`\n",
-    "inviteinfo_code": "Code: `{{invite.code}}`\n",
+    "inviteinfo_error": "{{emote_warn}} Nemohu najít server s touto pozvánkou",
+    "inviteinfo_verification_level": "Úroveň ověření: `{{guild.verificationLevel}}`\n",
+    "inviteinfo_large": "Velký: `{{guild.large}}`\n",
+    "inviteinfo_code": "Kód: `{{invite.code}}`\n",
     "inviteinfo_inviter_id": "ID: `{{invite.inviter.id}}`\n",
-    "inviteinfo_inviter_tag": "Tag: `{{invite.inviter.tag}}`\n",
+    "inviteinfo_inviter_tag": "Jméno: `{{invite.inviter.tag}}`\n",
     "inviteinfo_inviter_avatar": "Avatar: [`Link (4096)`]({{user_avatar}})\n",
     "inviteinfo_channel_id": "ID: `{{invite.channel.id}}`\n",
-    "inviteinfo_channel_name": "Name: `{{invite.channel.name}}`\n",
+    "inviteinfo_channel_name": "Jméno: `{{invite.channel.name}}`\n",
     "inviteinfo_channel_nsfw": "NSFW: `{{invite.channel.nsfw}}`\n",
   
-    "deafen_already_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is already deafened!",
-    "undeafen_not_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is not deafened!",
+    "deafen_already_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` je již deafened!",
+    "undeafen_not_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` není deafened!",
   
-    "slowmode_success_remove": "{{emote_success}} Successfully removed slowmode from <#{{channel}}>",
-    "slowmode_success": "{{emote_success}} Successfully set slowmode in <#{{channel}}> to **{{slowmode}}**",
-    "slowmode_missing_perms": "{{emote_fail}} The bot is missing permissions to manage <#{{channel}}>",
+    "slowmode_success_remove": "{{emote_success}} Slowmode v kanálu <#{{channel}}> byl úspěsně odebrán",
+    "slowmode_success": "{{emote_success}} Slowmode v kanálu <#{{channel}}> byl úspěšně nastaven na **{{slowmode}}**",
+    "slowmode_missing_perms": "{{emote_fail}} Bot nemá dostatečné oprávnění pro správu <#{{channel}}>",
   
-    "duration_invalid_0s": "{{emote_fail}} Duration cannot be lower than **0 seconds**!",
-    "duration_invalid_6h": "{{emote_fail}} Duration cannot be longer than **6 hours**",
-    "duration_invalid_1y": "{{emote_fail}} Duration cannot be longer than **1 year**!",
+    "duration_invalid_0s": "{{emote_fail}} Doba trvání nemůže být menší než **0 vteřin**!",
+    "duration_invalid_6h": "{{emote_fail}} Doba trvání nemůže být delší než **6 hodin**",
+    "duration_invalid_1y": "{{emote_fail}} Doba trvání nemůže být delší než **1 rok**!",
   
-    "lockdown_locked": "{{emote_success}} Successfully locked down channel <#{{channel}}>",
-    "lockdown_unlocked": "{{emote_success}} Successfully unlocked channel <#{{channel}}>",
+    "lockdown_locked": "{{emote_success}} Kanál <#{{channel}}> byl úspěšně uzamčen",
+    "lockdown_unlocked": "{{emote_success}} Kanál <#{{channel}}> byl úspěšně odemčen",
   
-    "mute_muterole_not_found": "{{emote_warn}} This server does not have a mute role configured!\n{{emote_wrench}} **Tip:** You can configure the mute role using the `!configure mute_role` command",
-    "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` is not currently muted!",
-    "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` is already muted!",
-    "unmute_confirm": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has not been muted by Bulbbot. Are you sure you want to unmute them?\n*Unmuting a user not muted by Bulbbot will only remove the muted role from them*",
-    "unmute_special": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been unmuted for **{{reason}}** ",
+    "mute_muterole_not_found": "{{emote_warn}} Tento server nemá nastavenou umlčenou roli!\n{{emote_wrench}} **Tip:** Umlčenou roli lze nastavit pomocí příkazu `!configure mute_role`",
+    "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` není právě umlčen!",
+    "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` je již umlčen!",
+    "unmute_confirm": "{{emote_warn}} **{{target.tag}}** `({{target.id}})`nebyl umlčen Bulbbotem. Jsi si jist že je chceš odmlčet?\n*Odmlčení uživatele neumlčeného Bulbbotem pouze odebere umlčenou roli*",
+    "unmute_special": "{{emote_success}} **{{target.tag}}** `({{target.id}})` byl odmlčen za **{{reason}}** ",
   
-    "infraction_not_found": "{{emote_fail}} Infraction **#{{infraction_id}}** could not be found!",
-    "infraction_delete_confirm": "{{emote_warn}} Are you sure you want to delete infraction **#{{infraction_id}}**? This action __**cannot**__ be undone.\n**Offender:** {{target.tag}} `({{target.id}})`\n**Moderator:** {{moderator.tag}} `({{moderator.id}})`\n**Reason:** {{reason}}",
-    "infraction_delete_success": "{{emote_success}} Infraction **#{{infraction_id}}** has been successfully deleted!",
-    "infraction_info_inf_id": "**Infraction ID:** {{infraction_id}}\n",
-    "infraction_info_target": "**Target:** {{target.tag}} `({{target.id}})`\n",
-    "infraction_info_moderator": "**Moderator:** {{moderator.tag}} `({{moderator.id}})`\n",
-    "infraction_info_created": "**Created:** {{created}}\n",
-    "infraction_info_active": "**Active:** {{active}}",
-    "infraction_info_expires": "**Expires:** {{expires}}",
-    "infraction_info_reason": "\n\n**Reason:** {{reason}}",
-    "infraction_search_not_found": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has no infractions!",
-    "infraction_list_not_found": "{{emote_warn}} This server does not seem to have any infractions!",
-    "infraction_claim_success": "{{emote_success}} You have claimed responsibility over infraction **#{{infraction_id}}**",
-    "infraction_update_success": "{{emote_success}} Infraction **#{{infraction_id}}** has been updated!",
+    "infraction_not_found": "{{emote_fail}} Přestupek **#{{infraction_id}}** nelze najít!",
+    "infraction_delete_confirm": "{{emote_warn}} Jsi si jist že chceš vymazat přestupek **#{{infraction_id}}**? Tuto akci __**nelze**__ vzít zpět.\n**Provinilec:** {{target.tag}} `({{target.id}})`\n**Moderátor:** {{moderator.tag}} `({{moderator.id}})`\n**Důvod:** {{reason}}",
+    "infraction_delete_success": "{{emote_success}} Přestupek **#{{infraction_id}}** byl úspěšně smazán!",
+    "infraction_info_inf_id": "**ID přestupku:** {{infraction_id}}\n",
+    "infraction_info_target": "**Cíl:** {{target.tag}} `({{target.id}})`\n",
+    "infraction_info_moderator": "**Moderátor:** {{moderator.tag}} `({{moderator.id}})`\n",
+    "infraction_info_created": "**Vytvořen:** {{created}}\n",
+    "infraction_info_active": "**Aktivní:** {{active}}",
+    "infraction_info_expires": "**Vyprší:** {{expires}}",
+    "infraction_info_reason": "\n\n**Důvod:** {{reason}}",
+    "infraction_search_not_found": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` nemá žádné přestupky!",
+    "infraction_list_not_found": "{{emote_warn}} Tento server vypadá že nemá přestupky!",
+    "infraction_claim_success": "{{emote_success}} Nárokuješ si odpovědnost za přestupek **#{{infraction_id}}**",
+    "infraction_update_success": "{{emote_success}} Přestupek **#{{infraction_id}}** byl aktualizován!",
   
-    "infraction_interaction_reply": "{{emote_warn}} **{{target.tag}}'s** `({{target.id}})` infractions",
-    "infraction_interaction_placeholder": "No Infractions Selected",
-    "infraction_interaction_description": "Click to view more info",
+    "infraction_interaction_reply": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` přestupky",
+    "infraction_interaction_placeholder": "Nejsou vybrány žádné přestupky",
+    "infraction_interaction_description": "Klikni pro zobrazení více informací",
   
-    "commands_help": "You can find all the commands Bulbbot offers over **[here](https://docs.bulbbot.mrphilip.xyz/command-list)**",
+    "commands_help": "Všechny příkazy které Bulbbot nabízí lze najít **[zde](https://docs.bulbbot.mrphilip.xyz/command-list)**",
   
-    "help_unable_to_find_command": "`{{commandName}}` is not a valid command, for a full list of commands visit our website <https://docs.bulbbot.mrphilip.xyz/command-list>"
+    "help_unable_to_find_command": "`{{commandName}}` není platný příkaz, pro úplný list příkazů navštiv naší stránku <https://docs.bulbbot.mrphilip.xyz/command-list>"
 }
