--- a/src/languages/cs-CZ.json
+++ b/src/languages/cs-CZ.json
@@ -270,21 +270,21 @@
   
     "invite_desc": "**Přidej bota na svůj server: **\n{{bot_invite}}\n\n**Přidej se na náš server**\n{{support_guild}}",
   
-    "remind_list_none": "{{emote_warn}} Nemáš nastaveny žádné upomínky",
-    "remind_placeholder": "Žádné upomínky vybrány",
-    "remind_prompt": "{{emote_remind}} **{{user.tag}}** `({{user.id}})` aktivní upomínky",
-    "remind_remove_unable_to_find": "{{emote_fail}} Nemohu najít upomínku s ID `{{reminderId}}`",
-    "remind_remove_removed": "{{emote_success}} Upomínka s ID `{{reminderId}}` byla úspěšně odebrána",
-    "remind_set_how_to_get_reminded": "Jak by jsi chtěl být upomenut?",
-    "remind_set_dm": "Poslat upomínku do DM",
-    "remind_set_channel": "Poslat upomínku do kanálu",
-    "remind_set_select_dm": "Upomenu ve tvých DMs **<t:{{duration}}:R>**",
-    "remind_set_select_channel": "Upomenu v tomto kanále **<t:{{duration}}:R>**",
-    "remind_no_permissions": "{{emote_lock}} Nemůžeš nahlížet do cizích upomínek!",
-    "remind_not_found": "{{emote_warn}} Nemohu najít tuto upomínku",
+    "remind_list_none": "{{emote_warn}} Nemáš nastaveny žádné připomínky",
+    "remind_placeholder": "Žádné připomínky vybrány",
+    "remind_prompt": "{{emote_remind}} **{{user.tag}}** `({{user.id}})` aktivní připomínky",
+    "remind_remove_unable_to_find": "{{emote_fail}} Nemohu najít připomínku s ID `{{reminderId}}`",
+    "remind_remove_removed": "{{emote_success}} Připomínka s ID `{{reminderId}}` byla úspěšně odebrána",
+    "remind_set_how_to_get_reminded": "Jak by jsi chtěl být připomenut?",
+    "remind_set_dm": "Poslat připomínku do DM",
+    "remind_set_channel": "Poslat připomínku do kanálu",
+    "remind_set_select_dm": "Připomenu ve tvých DMs **<t:{{duration}}:R>**",
+    "remind_set_select_channel": "Připomenu v tomto kanále **<t:{{duration}}:R>**",
+    "remind_no_permissions": "{{emote_lock}} Nemůžeš nahlížet do cizích připomínek!",
+    "remind_not_found": "{{emote_warn}} Nemohu najít tuto připomínku",
   
-    "remind_desc_header": "Upomínka #{{reminder.id}}",
-    "remind_desc_reason": "**Upomínka:** {{reminder.reason}}\n",
+    "remind_desc_header": "Připomínka #{{reminder.id}}",
+    "remind_desc_reason": "**Připomínka:** {{reminder.reason}}\n",
     "remind_desc_expire": "**Vyprší:** <t:{{reminder.expireTime}}:R>\n",
     "remind_desc_created": "**Vytvořena:** <t:{{createdAt}}> [`Link`]({{message}})",
   
