--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -29,12 +29,15 @@
     "unmute": "unmuted",
     "auto_unmute": "automatically unmuted",
     "kick": "kicked",
+    "manual_kick": "manually kicked",
     "ban": "banned",
     "force_ban": "force-banned",
     "soft_ban": "soft-banned",
     "temp_ban": "temp-banned",
+    "manual_ban": "manually banned",
     "unban": "unbanned",
     "auto_unban": "automatically unbanned",
+    "manual_unban": "manually unbanned",
     "deafen": "deafened",
     "undeafen": "undeafened",
     "voice_kick": "voice-kicked",
