--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -230,6 +230,8 @@
   "action_success_temp": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been {{action}} until **{{until}}** for **{{reason}}** `[#{{infraction_id}}]`",
 
   "action_success_multi": "{{emote_success}} {{full_list}} have been {{action}} for **{{reason}}**",
+  "action_multi_invalid_targets": "{{emote_warn}} Was unable to perform the selected action on **{{amount}}** target(s)",
+  "action_multi_no_valid_targets": "{{emote_fail}} No valid targets have been selected.",
   "action_multi_less_than_2": "{{emote_warn}} Selected less than 2 targets. Executing normal {{action}} instead",
   "action_multi_types": {
     "ban": "ban",
